Changes in pom.xml

--- a/Main/JavaProgramsExample/pom.xml
+++ b/Main/JavaProgramsExample/pom.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  
   <parent>
-    <artifactId>Main</artifactId>
-    <groupId>com.kk</groupId>
-    <version>1.0</version>
+	    <groupId>com.kk</groupId>
+	    <artifactId>Main</artifactId>
+	    <version>1.0</version>
   </parent>
 
   <groupId>com.kk</groupId>
-  <artifactId>javaprogramexample</artifactId>
+  <artifactId>javaprogramsexample</artifactId>
   <version>1.0</version>
 
-  <name>JavaProgramsExample</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
-
+  <name>javaprogramsexample</name>
+ 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
