--- a/Main/SpringAOP/pom.xml
+++ b/Main/SpringAOP/pom.xml
@@ -6,16 +6,16 @@
 	<modelVersion>4.0.0</modelVersion>
 	
 	 <parent>
-	    <artifactId>Main</artifactId>
 	    <groupId>com.kk</groupId>
+	    <artifactId>Main</artifactId>
 	    <version>1.0</version>
   	</parent>
   
 	<groupId>com.kk</groupId>
-	<artifactId>spring-aop</artifactId>
+	<artifactId>springaop</artifactId>
 	<version>1.0</version>
 
-	<name>spring-aop</name>
+	<name>springaop</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
