--- a/Main/pom.xml
+++ b/Main/pom.xml
@@ -19,9 +19,9 @@
 
 	<!-- sub modules -->
 	<modules>
-		<module>javaprogramexample</module>
-		<module>spring-aop</module>
-		<module>spring-mvc-example</module>
+		<module>javaprogramsexample</module>
+		<module>springaop</module>
+		<module>springmvcexample</module>
 		<module>springbasicexample</module>
 		<module>springbootbasic</module>
 	</modules>
