--- a/Main/SpringBootBasic/pom.xml
+++ b/Main/SpringBootBasic/pom.xml
@@ -8,9 +8,9 @@
 	    <version>1.0</version>
   	</parent>
 	<groupId>com.kk.learning</groupId>
-	<artifactId>springbootbasic</artifactId>
+	<artifactId>SpringBootBasic</artifactId>
 	<version>1.0</version>
-	<name>springbootbasic</name>
+	<name>SpringBootBasic</name>
 	<description>First Spring Boot project</description>
 	<properties>
 		<java.version>1.8</java.version>
